kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
  namespace: nexus
spec:
  type: ClusterIP
  selector:
    app: nexus
  ports:
  - port: 3000
    targetPort: 8081
